# causal-conv1d-mps

./: .gitignore  LICENSE  README.md  README_CN.md  bench.py  causal_conv1d.metal  causal_conv1d_kernel.mm  pyproject.toml  setup.py  test.py
causal_conv1d_mps/: __init__.py  autograd.py  causal_conv1d.metal  causal_conv1d_kernel.mm
