[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "torch>=2.1",
  "ninja>=1.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "causal_conv1d_mps"
version = "0.1.0"
description = "MPS CausalConv1D (Metal) with simple Python interfaces"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Zhonghan Li", email = "lizhonghan@qq.com"},
]
keywords = ["pytorch", "mps", "metal", "convolution", "causal", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=2.2.6",
  "pytest>=8.4.1",
  "torch>=2.1",
]

[tool.setuptools]
packages = ["causal_conv1d_mps"]


